Fix surefire plugin configuration
* Remove -Xverify:none since it is deprecated in JDK 13 and up
* Move plugin dependencies to correct location